--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@ body {
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 }
+/* Scrollbar custome style below */
 /* width */
 ::-webkit-scrollbar {
     width: 12px;
